# basenji2-pytorch

./: .gitignore  LICENSE  README.md  conda-lock.yml  environment.yml  params_human.json  pyproject.toml  tf_to_torch.py
basenji2_pytorch/: __init__.py  blocks.py  model.py
